k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin-container
        image: finalyrazure.azurecr.io/admin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  #type: LoadBalancer
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
